--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,53 @@
 * {
   margin: 0px;
 }
+
+.coin-app {
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  background-color: #fff;
+  box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.24);
+  position: fixed;
+  width: 100%;
+}
+
+.nav-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+.nav-middle {
+  background-color: whitesmoke;
+  border-radius: 5px;
+}
+
+/* Nav Middle */
+.coin-search {
+  display: flex;
+  align-items: center;
+  padding: 6px 12px;
+}
+
+.coin-search > form > input{
+  font-size: medium;
+  border: 0;
+  margin-left: 6px;
+  background-color: transparent;
+  outline: none;
+}
+
+/* Content */
+.coin-container {
+  margin-top: 90px;
+  min-height: calc(100vh - 90px);
+}
+
+.title {
+  margin-left: 20px;
+}
