Added onClick popup to Avatar

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,15 @@ nav {
   outline: none;
 }
 
+/* Nav Right */
+.MuiAvatar-root:hover {
+  cursor: pointer;
+}
+
+.MuiPaper-root {
+  top: 60px !important;
+}
+
 /* Content */
 .coin-container {
   margin-top: 90px;
