--- a/src/App.css
+++ b/src/App.css
@@ -60,10 +60,21 @@ nav {
   padding: 6px 12px;
 }
 
+.coin-search > form {
+  width: 100%;
+
+}
+
 .coin-search > form > input{
   font-size: medium;
   border: 0;
   margin-left: 6px;
   background-color: transparent;
   outline: none;
+  width: 100%;
+}
+
+.cancel-search {
+  fill: #bdbdbd !important;
+  cursor: pointer;
 }
