--- a/src/App.css
+++ b/src/App.css
@@ -2,56 +2,26 @@
   margin: 0px;
 }
 
+a {
+  color: #000;
+  text-decoration: none;
+}
+
 .coin-app {
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
 }
 
-/* Content */
-.coin-container {
-  margin-top: 90px;
-  min-height: calc(100vh - 90px);
-}
-
 .title {
   margin-left: 20px;
 }
 
-/* Search */
-.search-container {
-  margin: 20px;
-  background-color: white;
-  padding: 20px;
-  
-}
+/* Content */
 
-.search-coin-bar {
-  background-color: whitesmoke;
-  border-radius: 5px;
-}
-
-.coin-search {
-  display: flex;
-  align-items: center;
-  padding: 6px 12px;
-}
-
-.coin-search > form {
-  width: 100%;
-
-}
-
-.coin-search > form > input{
-  font-size: medium;
-  border: 0;
-  margin-left: 6px;
-  background-color: transparent;
-  outline: none;
-  width: 100%;
-}
-
-.cancel-search {
-  fill: #bdbdbd !important;
-  cursor: pointer;
+.homepage,
+.coin-container,
+.coinpage {
+  margin-top: 90px;
+  min-height: calc(100vh - 90px);
 }
