--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,22 +1,40 @@
 nav {
-    background-color: #fff;
-    box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.24);
-    position: fixed;
-    width: 100%;
-  }
-  
-  .nav-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-  }
-  
-  /* Nav Right */
-  .MuiAvatar-root:hover {
-    cursor: pointer;
-  }
-  
-  .MuiPaper-root {
-    top: 60px !important;
-  }
+  background-color: #fff;
+  box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.24);
+  position: fixed;
+  width: 100%;
+}
+
+.nav-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+.nav-left,
+.nav-right {
+  display: flex;
+  align-items: center;
+}
+
+/* Nav Left */
+.logo {
+  margin-right: 10px;
+}
+
+.nav-row {
+  display: flex;
+}
+
+.nav-item {
+  margin: 0px 10px;
+}
+/* Nav Right */
+.MuiAvatar-root:hover {
+  cursor: pointer;
+}
+
+.MuiPaper-root {
+  top: 60px !important;
+}
